// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Signature component render with props 1`] = `
<span>
  Vova
</span>
`;

exports[`render Signature component render without props 1`] = `
<span>
  Vova Pekun
</span>
`;
